--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,18 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["imena", "invitations", "family", "events"],
+  "keywords": [
+    "imena",
+    "invitations",
+    "family",
+    "events"
+  ],
   "author": "Imena Family",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "puppeteer": "^21.6.1",
-    "cors": "^2.8.5"
+    "puppeteer": "^24.37.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
